tests/baselines/reference/duplicateVarsAcrossFileBoundaries.errors.txt
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_0.ts (0 errors) ====
    var x = 3;
    var y = "";
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_1.ts (1 errors) ====
    var x = true;
        ~~~~~~~~
!!! duplicateVarsAcrossFileBoundaries_1.ts(1,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'number', but here has type 'boolean'.
    var z = 3;
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_2.ts (3 errors) ====
    var x = "";
        ~~~~~~
!!! duplicateVarsAcrossFileBoundaries_2.ts(1,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'number', but here has type 'string'.
    var y = 3;
        ~~~~~
!!! duplicateVarsAcrossFileBoundaries_2.ts(2,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'string', but here has type 'number'.
    var z = false;
        ~~~~~~~~~
!!! duplicateVarsAcrossFileBoundaries_2.ts(3,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'z' must be of type 'number', but here has type 'boolean'.
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_3.ts (0 errors) ====
    var x = 0;
    var y = "";
    var z = 0;
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_4.ts (1 errors) ====
    module P { }
    import p = P;
    var q;
        ~
!!! duplicateVarsAcrossFileBoundaries_4.ts(3,5): error TS4026: Variable declaration cannot have the same name as an import declaration.
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_5.ts (1 errors) ====
    module Q { }
    import q = Q;
    var p;
        ~
!!! duplicateVarsAcrossFileBoundaries_5.ts(3,5): error TS4026: Variable declaration cannot have the same name as an import declaration.